# gitlab-pipeline-viewer

./: .gitlab-ci.yml  Cargo.toml  READEME.md
src/: config.rs  emoji.rs  error_log.rs  git.rs  gitlabbing.rs  main.rs
src/render/: err.rs  header.rs  jobs.rs  mod.rs  pipeline.rs  util.rs
