[package]
name = "gitlab-pipeline-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
git2 = "0.14.2"
gitlab = "0.1500.0"
chrono = "0.4"

# Terminal
termsize = "0.1"
unicode-segmentation = "1.9.0"
ctrlc = "3.2.2"
crossterm = "0.23.2"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
